# xception-photo-verification

./: .gitignore  README.md  pyproject.toml  requirements.txt
paper/: build_docx.py  paper.docx  paper.md  truphoto_architecture.drawio
presentation/: generate_slides.py  presenter_notes.md  truphoto_presentation.pptx
src/: config.py  dataset_loader.py  frequency_features.py  run_freq_only.py  step1_prepare_dataset.py  step2_extract_features.py  step3_train_classifiers.py  step4_evaluate.py  step4b_cross_dataset_check.py  step5_gradio_demo.py  verify_dataset.py
